# Quaternions_cpp

./: .gitignore  CMakeLists.txt  README.md  Working.sln  Working.vcxproj  linalg.cpp  linalg.h  main.cpp  quaternion.cpp  quaternion.h
tests/: mytest.cpp  mytest.h  qtest.cpp
